Fixing some broken css

--- a/app/assets/stylesheets/meal_postings.scss
+++ b/app/assets/stylesheets/meal_postings.scss
@@ -186,6 +186,8 @@
     border-radius: 3px;
     background-color: white;
     height: auto;
+  }
+  .meal-div-mealpostings-show {
     padding-bottom: 10px;
   }
 }
@@ -196,7 +198,7 @@
     border: 1px solid #ddd;
     border-radius: 3px;
     background-color: white;
-    height: 20vw;
+    height: auto;
   }
 }
 
@@ -315,16 +317,23 @@ table.new-meal-table {
 
 .meal-posting-user-info {
   margin: 5%;
-  padding: 10px;
   background-color: white;
   border: 1px solid #ddd;
     .show-page {
 
     }
+    .profile-img-holder{
+      display: flex;
+      justify-content: center;
+      content-align: center;
+      height: 300px;
+      overflow: hidden;
+    }
     .profile-pic {
-      margin: 20px;
-      width: 100%;
-      height: 100%;
+      margin-left: 40px;
+      padding: 15px;
+      max-width: 100%;
+      max-height: 100%;
     }
     .show-pic {
       content-align: center;
@@ -336,7 +345,9 @@ table.new-meal-table {
       width: 400px;
     }
     .profile-info {
-      margin-left:400px;
+      font-size: 1.4em;
+      margin-left:350px;
+      padding-top:20px;
     }
     #show-meals {
       margin-left: 28%;
@@ -348,12 +359,16 @@ div.col-xs-4 {
   height: 100%;
 }
 
-.img-thumbnail {
-  margin-top: 10%;
-  padding: 0%;
-  height: 100%;
-  width: 100%;
+.meal-posting-meal-images {
+  margin-top:10px;
 }
+
+// .img-thumbnail {
+//   margin-top: 10%;
+//   padding: 0%;
+//   height: 100%;
+//   width: 100%;
+// }
 
 .host-info {
   margin-left: 15px;
