--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -6,3 +6,7 @@
 .accepted-payment {
   margin-left: 15px;
 }
+
+.reservation-show-buttons {
+  margin-bottom: 10px;
+}
